# hopx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  openapi_agent.json  openapi_public.json  setup_repo.sh
.github/: PULL_REQUEST_TEMPLATE.md  TEST_MAPPING.md  test_mapper.py
.github/ISSUE_TEMPLATE/: bug_report.md  complete_tests_report.md  feature_request.md  individual_test_report.md  question.md  test_status_report.md
.github/workflows/: README.md  README_TEST_ISSUES.md  cli-publish.yml  cli-tests.yml  javascript-publish.yml  python-publish.yml  python-tests-quick.yml  python-tests.yml  test-quick.yml  test.yml
cli/: .gitignore  README.md  pyproject.toml
cli/scripts/: install.sh  uninstall.sh
cli/src/hopx_cli/: __init__.py  __main__.py  main.py
cli/src/hopx_cli/api/: __init__.py
cli/src/hopx_cli/auth/: __init__.py  api_keys.py  credentials.py  display.py  oauth.py  token.py
cli/src/hopx_cli/commands/: __init__.py  auth.py  billing.py  cmd.py  config.py  env.py  files.py  init.py  members.py  org.py  profile.py  run.py  sandbox.py  self_update.py  system.py  template.py  terminal.py  usage.py
cli/src/hopx_cli/core/: __init__.py  async_helpers.py  config.py  context.py  errors.py  sdk.py  version.py
cli/src/hopx_cli/examples/: auth_usage.py  core_usage.py
cli/src/hopx_cli/output/: __init__.py  formatters.py  json_formatter.py  plain_formatter.py  progress.py  prompts.py  tables.py
cli/src/hopx_cli/services/: __init__.py
cli/src/hopx_cli/utils/: __init__.py
cli/tests/: __init__.py  conftest.py  e2e_comprehensive.py  e2e_full_suite.py
cli/tests/fixtures/: __init__.py  auth_mocks.py  sdk_mocks.py
cli/tests/unit/: __init__.py
cli/tests/unit/auth/: conftest.py
cli/tests/unit/commands/: test_auth.py  test_template.py
cookbook/javascript/: 01_basic_operations.ts  02_code_execution.ts  03_file_operations.ts  04_commands.ts  05_environment_variables.ts  06_process_management.ts  07_desktop_automation.ts  08_websocket_features.ts  09_advanced_use_cases.ts  10_best_practices.ts  11_template_management.ts  template_building.js
cookbook/python/: 01_basic_operations.py  02_code_execution.py  02_code_execution_rich_outputs.py  03_file_operations.py  04_commands.py  05_environment_variables.py  06_process_management.py  07_desktop_automation.py  08_websocket_features.py  09_advanced_use_cases.py  10_best_practices.py  11_template_management.py  11_template_management_simple.py  template_building.py
javascript/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/examples/: basic.ts  lifecycle.ts  ollama-template.ts  private-registry.ts  template-build.ts  template-nodejs.ts  test-template-building.ts  working-directory.ts
javascript/src/: client.ts  errors.ts  index.ts  sandbox.ts  ws-client.ts
javascript/src/resources/: cache.ts  commands.ts  desktop.ts  env-vars.ts  files.ts  terminal.ts
javascript/src/template/: build-flow.ts  builder.ts  file-hasher.ts  ready-checks.ts  tar-creator.ts  types.ts
javascript/src/types/: generated.ts  index.ts
javascript/tests/: sdk-actions.test.ts  sdk-advanced.test.ts  sdk-desktop.test.ts  sdk-lifecycle.test.ts  sdk-templates.test.ts  sdk-terminal.test.ts  test-helpers.ts  tests_README.md
python/: .gitignore  CHANGELOG.md  CLAUDE.md  FUNCTION_BY_FUNCTION_TESTING.md  README.md  TEST_EVIDENCE.md  TEST_RUNNER_README.md  pyproject.toml  run_tests.py  run_tests.sh  run_tests_individually.py  run_tests_individually.sh
python/examples/: README_TESTS.md  agent_commands.py  async_iterator.py  debug_logging.py  env_vars_example.py  lazy_iterator.py  preview_url_async.py  preview_url_basic.py  preview_url_web_app.py  template_build.py  template_nodejs.py  test_template_building.py  test_websocket_auth.py
python/hopx_ai/: __init__.py  _async_commands.py  _async_files.py  _async_terminal.py  _base_commands.py  _ws_client.py  async_sandbox.py  commands.py  desktop.py  errors.py  models.py  sandbox.py
python/hopx_ai/_generated/: models.py
python/hopx_ai/template/: build_flow.py  builder.py  types.py
python/tests/: .env.sample  COVERAGE_REPORT.md  INTENTIONALLY_UNTESTED.md  INTERACTIVE_TEST_RUNNER.md  README.md  TEST_COMMANDS.md  __init__.py  conftest.py  create_github_issue.py  run_tests_interactive.py
python/tests/e2e/: __init__.py
python/tests/integration/: DEBUGGING.md  README.md  __init__.py  debug_utils.py
(+58 files in other folders)
